Docu/jar/generated-sources/antlr4/practica/compi2/GrammarParser.java
// Generated from practica/compi2/Grammar.g4 by ANTLR 4.13.2
package practica.compi2;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ESTO=1, SERIES=2, NUMERUS=3, TEXTUM=4, DECIMALIS=5, LITTERA=6, VERUM=7, 
		FALSUS=8, BOOL=9, STRUCTURA=10, SI=11, ALITER=12, DUM=13, FACERE=14, PER=15, 
		PERGE=16, INTERRUMPE=17, ACTIO=18, RATIO=19, REDDERE=20, VARIABILES=21, 
		MUNERA=22, MAIOR=23, FINIS=24, FIN_PROGRAMA=25, MAS=26, MENOS=27, MULT=28, 
		DIV=29, IGUAL_IGUAL=30, NO_IGUAL=31, MENOR_QUE=32, MAYOR_QUE=33, MENOR_IGUAL=34, 
		MAYOR_IGUAL=35, AND=36, OR=37, NO=38, MAS_MAS=39, MENOS_MENOS=40, IGUAL=41, 
		PUNTO_COMA=42, COMA=43, DOS_PUNTOS=44, PUNTO=45, PARENTESIS_IZQUIERDO=46, 
		PARENTESIS_DERECHO=47, LLAVE_IZQUIERDA=48, LLAVE_DERECHA=49, CORCHETE_IZQUIERDO=50, 
		CORCHETE_DERECHO=51, DESPLAZAMIENTO_IZQUIERDO=52, DESPLAZAMIENTO_DERECHO=53, 
		NUMERO=54, DECIMAL=55, CADENA=56, CARACTER=57, IDENTIFICADOR=58, COMENTARIO_LINEA=59, 
		COMENTARIO_BLOQUE=60, COMENTARIO_HASH=61, ESPACIO_EN_BLANCO=62;
	public static final int
		RULE_program = 0, RULE_declaracionVarablesOpcionales = 1, RULE_declaracionFuncionesOpcionales = 2, 
		RULE_declaracionPrgrama = 3, RULE_declaracionVariable = 4, RULE_inicializador = 5, 
		RULE_inicializadorArray = 6, RULE_tipoVariable = 7, RULE_tipo = 8, RULE_booleano = 9, 
		RULE_definicionFuncion = 10, RULE_funcionSinRetorno = 11, RULE_funcionConRetorno = 12, 
		RULE_parametros = 13, RULE_bloqueFuncion = 14, RULE_seccionVariablesFuncion = 15, 
		RULE_definicionEstructura = 16, RULE_atributoEstructura = 17, RULE_inicializadorEstructura = 18, 
		RULE_asignacionAtributo = 19, RULE_bloque = 20, RULE_instruccion = 21, 
		RULE_asignacion = 22, RULE_incrementoInstruccion = 23, RULE_accesoVariable = 24, 
		RULE_accesoSufijo = 25, RULE_condicional = 26, RULE_ramas = 27, RULE_cicloMientras = 28, 
		RULE_cicloHacerMientras = 29, RULE_cicloIterador = 30, RULE_incremento = 31, 
		RULE_controlFlujo = 32, RULE_lectura = 33, RULE_escritura = 34, RULE_retorno = 35, 
		RULE_llamadaFuncion = 36, RULE_expresion = 37, RULE_expresionLogicaOr = 38, 
		RULE_expresionLogicaAnd = 39, RULE_expresionIgualdad = 40, RULE_expresionRelacional = 41, 
		RULE_expresionAditiva = 42, RULE_expresionMultiplicativa = 43, RULE_expresionUnaria = 44, 
		RULE_expresionPostfija = 45, RULE_expresionPrimaria = 46, RULE_inicializadorEstructuraAnonimo = 47, 
		RULE_identificador = 48;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declaracionVarablesOpcionales", "declaracionFuncionesOpcionales", 
			"declaracionPrgrama", "declaracionVariable", "inicializador", "inicializadorArray", 
			"tipoVariable", "tipo", "booleano", "definicionFuncion", "funcionSinRetorno", 
			"funcionConRetorno", "parametros", "bloqueFuncion", "seccionVariablesFuncion", 
			"definicionEstructura", "atributoEstructura", "inicializadorEstructura", 
			"asignacionAtributo", "bloque", "instruccion", "asignacion", "incrementoInstruccion", 
			"accesoVariable", "accesoSufijo", "condicional", "ramas", "cicloMientras", 
			"cicloHacerMientras", "cicloIterador", "incremento", "controlFlujo", 
			"lectura", "escritura", "retorno", "llamadaFuncion", "expresion", "expresionLogicaOr", 
			"expresionLogicaAnd", "expresionIgualdad", "expresionRelacional", "expresionAditiva", 
			"expresionMultiplicativa", "expresionUnaria", "expresionPostfija", "expresionPrimaria", 
			"inicializadorEstructuraAnonimo", "identificador"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'esto'", "'series'", "'numerus'", "'textum'", "'decimalis'", "'littera'", 
			"'verum'", "'falsus'", "'bool'", "'structura'", "'si'", "'aliter'", "'dum'", 
			"'facere'", "'per'", "'perge'", "'interrumpe'", "'actio'", "'ratio'", 
			"'reddere'", "'VARIABILES'", "'MUNERA'", "'MAIOR'", "'finis'", "'FINIS'", 
			"'+'", "'-'", "'*'", "'/'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
			"'&&'", "'||'", "'non'", "'++'", "'--'", "'='", "';'", "','", "':'", 
			"'.'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'<<'", "'>>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ESTO", "SERIES", "NUMERUS", "TEXTUM", "DECIMALIS", "LITTERA", 
			"VERUM", "FALSUS", "BOOL", "STRUCTURA", "SI", "ALITER", "DUM", "FACERE", 
			"PER", "PERGE", "INTERRUMPE", "ACTIO", "RATIO", "REDDERE", "VARIABILES", 
			"MUNERA", "MAIOR", "FINIS", "FIN_PROGRAMA", "MAS", "MENOS", "MULT", "DIV", 
			"IGUAL_IGUAL", "NO_IGUAL", "MENOR_QUE", "MAYOR_QUE", "MENOR_IGUAL", "MAYOR_IGUAL", 
			"AND", "OR", "NO", "MAS_MAS", "MENOS_MENOS", "IGUAL", "PUNTO_COMA", "COMA", 
			"DOS_PUNTOS", "PUNTO", "PARENTESIS_IZQUIERDO", "PARENTESIS_DERECHO", 
			"LLAVE_IZQUIERDA", "LLAVE_DERECHA", "CORCHETE_IZQUIERDO", "CORCHETE_DERECHO", 
			"DESPLAZAMIENTO_IZQUIERDO", "DESPLAZAMIENTO_DERECHO", "NUMERO", "DECIMAL", 
			"CADENA", "CARACTER", "IDENTIFICADOR", "COMENTARIO_LINEA", "COMENTARIO_BLOQUE", 
			"COMENTARIO_HASH", "ESPACIO_EN_BLANCO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public DeclaracionPrgramaContext declaracionPrgrama() {
			return getRuleContext(DeclaracionPrgramaContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public DeclaracionVarablesOpcionalesContext declaracionVarablesOpcionales() {
			return getRuleContext(DeclaracionVarablesOpcionalesContext.class,0);
		}
		public DeclaracionFuncionesOpcionalesContext declaracionFuncionesOpcionales() {
			return getRuleContext(DeclaracionFuncionesOpcionalesContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VARIABILES) {
				{
				setState(98);
				declaracionVarablesOpcionales();
				}
			}

			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MUNERA) {
				{
				setState(101);
				declaracionFuncionesOpcionales();
				}
			}

			setState(104);
			declaracionPrgrama();
			setState(105);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionVarablesOpcionalesContext extends ParserRuleContext {
		public TerminalNode VARIABILES() { return getToken(GrammarParser.VARIABILES, 0); }
		public TerminalNode MAYOR_QUE() { return getToken(GrammarParser.MAYOR_QUE, 0); }
		public List<DeclaracionVariableContext> declaracionVariable() {
			return getRuleContexts(DeclaracionVariableContext.class);
		}
		public DeclaracionVariableContext declaracionVariable(int i) {
			return getRuleContext(DeclaracionVariableContext.class,i);
		}
		public List<DefinicionEstructuraContext> definicionEstructura() {
			return getRuleContexts(DefinicionEstructuraContext.class);
		}
		public DefinicionEstructuraContext definicionEstructura(int i) {
			return getRuleContext(DefinicionEstructuraContext.class,i);
		}
		public DeclaracionVarablesOpcionalesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionVarablesOpcionales; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterDeclaracionVarablesOpcionales(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitDeclaracionVarablesOpcionales(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitDeclaracionVarablesOpcionales(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionVarablesOpcionalesContext declaracionVarablesOpcionales() throws RecognitionException {
		DeclaracionVarablesOpcionalesContext _localctx = new DeclaracionVarablesOpcionalesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracionVarablesOpcionales);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(VARIABILES);
			setState(108);
			match(MAYOR_QUE);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1030L) != 0)) {
				{
				setState(111);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ESTO:
				case SERIES:
					{
					setState(109);
					declaracionVariable();
					}
					break;
				case STRUCTURA:
					{
					setState(110);
					definicionEstructura();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionFuncionesOpcionalesContext extends ParserRuleContext {
		public TerminalNode MUNERA() { return getToken(GrammarParser.MUNERA, 0); }
		public TerminalNode MAYOR_QUE() { return getToken(GrammarParser.MAYOR_QUE, 0); }
		public List<DefinicionFuncionContext> definicionFuncion() {
			return getRuleContexts(DefinicionFuncionContext.class);
		}
		public DefinicionFuncionContext definicionFuncion(int i) {
			return getRuleContext(DefinicionFuncionContext.class,i);
		}
		public DeclaracionFuncionesOpcionalesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionFuncionesOpcionales; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterDeclaracionFuncionesOpcionales(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitDeclaracionFuncionesOpcionales(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitDeclaracionFuncionesOpcionales(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionFuncionesOpcionalesContext declaracionFuncionesOpcionales() throws RecognitionException {
		DeclaracionFuncionesOpcionalesContext _localctx = new DeclaracionFuncionesOpcionalesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracionFuncionesOpcionales);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(MUNERA);
			setState(117);
			match(MAYOR_QUE);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ACTIO || _la==RATIO) {
				{
				{
				setState(118);
				definicionFuncion();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionPrgramaContext extends ParserRuleContext {
		public TerminalNode MAIOR() { return getToken(GrammarParser.MAIOR, 0); }
		public TerminalNode MAYOR_QUE() { return getToken(GrammarParser.MAYOR_QUE, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public TerminalNode FIN_PROGRAMA() { return getToken(GrammarParser.FIN_PROGRAMA, 0); }
		public TerminalNode PUNTO_COMA() { return getToken(GrammarParser.PUNTO_COMA, 0); }
		public DeclaracionPrgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionPrgrama; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterDeclaracionPrgrama(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitDeclaracionPrgrama(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitDeclaracionPrgrama(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionPrgramaContext declaracionPrgrama() throws RecognitionException {
		DeclaracionPrgramaContext _localctx = new DeclaracionPrgramaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracionPrgrama);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(MAIOR);
			setState(125);
			match(MAYOR_QUE);
			setState(126);
			bloque();
			setState(127);
			match(FIN_PROGRAMA);
			setState(128);
			match(PUNTO_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionVariableContext extends ParserRuleContext {
		public TerminalNode ESTO() { return getToken(GrammarParser.ESTO, 0); }
		public IdentificadorContext identificador() {
			return getRuleContext(IdentificadorContext.class,0);
		}
		public TerminalNode DOS_PUNTOS() { return getToken(GrammarParser.DOS_PUNTOS, 0); }
		public TipoVariableContext tipoVariable() {
			return getRuleContext(TipoVariableContext.class,0);
		}
		public TerminalNode PUNTO_COMA() { return getToken(GrammarParser.PUNTO_COMA, 0); }
		public InicializadorContext inicializador() {
			return getRuleContext(InicializadorContext.class,0);
		}
		public TerminalNode SERIES() { return getToken(GrammarParser.SERIES, 0); }
		public TerminalNode CORCHETE_IZQUIERDO() { return getToken(GrammarParser.CORCHETE_IZQUIERDO, 0); }
		public TerminalNode NUMERO() { return getToken(GrammarParser.NUMERO, 0); }
		public TerminalNode CORCHETE_DERECHO() { return getToken(GrammarParser.CORCHETE_DERECHO, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public InicializadorArrayContext inicializadorArray() {
			return getRuleContext(InicializadorArrayContext.class,0);
		}
		public DeclaracionVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionVariable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterDeclaracionVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitDeclaracionVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitDeclaracionVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionVariableContext declaracionVariable() throws RecognitionException {
		DeclaracionVariableContext _localctx = new DeclaracionVariableContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaracionVariable);
		int _la;
		try {
			setState(151);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ESTO:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				match(ESTO);
				setState(131);
				identificador();
				setState(132);
				match(DOS_PUNTOS);
				setState(133);
				tipoVariable();
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 558800121861505408L) != 0)) {
					{
					setState(134);
					inicializador();
					}
				}

				setState(137);
				match(PUNTO_COMA);
				}
				break;
			case SERIES:
				enterOuterAlt(_localctx, 2);
				{
				setState(139);
				match(SERIES);
				setState(140);
				identificador();
				setState(141);
				match(CORCHETE_IZQUIERDO);
				setState(142);
				match(NUMERO);
				setState(143);
				match(CORCHETE_DERECHO);
				setState(144);
				match(DOS_PUNTOS);
				setState(145);
				tipo();
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LLAVE_IZQUIERDA) {
					{
					setState(146);
					inicializadorArray();
					}
				}

				setState(149);
				match(PUNTO_COMA);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InicializadorContext extends ParserRuleContext {
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public InicializadorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicializador; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterInicializador(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitInicializador(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitInicializador(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InicializadorContext inicializador() throws RecognitionException {
		InicializadorContext _localctx = new InicializadorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_inicializador);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			expresion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
